--- a/src/main/resources/assets/minsenchantments/lang/en_us.json
+++ b/src/main/resources/assets/minsenchantments/lang/en_us.json
@@ -61,9 +61,9 @@
 	"enchantment.minsenchantments.waterbolt": "Waterbolt",
 	"enchantment.minsenchantments.waterbolt.desc": "projectiles dosen't affected by liquid blocks",
 	"enchantment.minsenchantments.mermaids_blessing": "Mermaid's Blessing",
-	"enchantment.minsenchantments.mermaids_blessing.desc": "while swimming, hostile mobs doesn't attack you",
+	"enchantment.minsenchantments.mermaids_blessing.desc": "while in water, hostile mobs won't attack you",
 	"enchantment.minsenchantments.sharp_waves": "Sharp Waves",
-	"enchantment.minsenchantments.sharp_waves.desc": "while in water, increase the damage of trident depend on distance traveled",
+	"enchantment.minsenchantments.sharp_waves.desc": "while in water, increase the damage of trident depending on distance traveled",
 	"enchantment.minsenchantments.tide": "Tide",
 	"enchantment.minsenchantments.tide.desc": "increase swimming speed constantly while keep swimming",
 	"enchantment.minsenchantments.poseidons_grace": "Poseidon's Grace",
